--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
+import Launches from '../components/Launches.astro';
+import About from '../components/About.astro';
+import Badge from '../components/Badge.astro';
 ---
 
-<Layout title="Alfabetizacion TIC">
-	<main>
-		<Header />
-	</main>
-</Layout>
+<Layout title="Alfabetizacion TIC"/>
+
+<style>
+	
+</style>
+	
 
 
