--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,11 @@
 interface Props {
 	title: string;
 }
+// Supports weights 100-900
+import "@fontsource-variable/onest"
+import AsideMenu from '../components/AsideMenu.astro';
+
+import { ViewTransitions } from 'astro:transitions';
 
 const { title } = Astro.props;
 ---
@@ -15,28 +20,46 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<ViewTransitions />
 	</head>
-	<body class="bg-gray-900 min-h-screen pb-32 ">
-		<slot />
+	<body>
+		<div id="app" class="relative h-screen p-2 gap-2 ">
+			<aside class="[grid-area:aside] flex-col flex overflow-y-auto ">
+				<AsideMenu />
+			
+			<main class="[grid-area:main] rounded-lg bg-zinc-900 overflow-y-auto"></main>
+			<footer class="[grid-area:player] bg-white-200"></footer>
+			<slot />
+		</aside>
+		</div>
 	</body>
 </html>
+<style>
+	#app{
+		display: grid;
+		grid-template-areas:
+		"aside main main"
+		"player player player" ;
+		grid-template-columns: 350px 1fr ;
+		grid-template-rows: 1fr auto ;
+	}
+</style>
 <style is:global>
 	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+		color-scheme: light dark ;
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-		color-scheme: dark light ;
+		background-color: black;
+		font-family: "Onest", system-ui, sans-serif;
+		
 	}
-	
+	body{
+		background: 06060605;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		min-height: 100vh;
+
+
+	}
 </style>
